--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "binary-vulture-server"
+name = "vulture-server"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.4"
-binary-vulture = { path = "../core" }
+vulture = { path = "../core" }
 serde = { version = "1.0.196", features = ["derive"] }
 tokio = { version = "1.35.1" }
